# AoC23

./: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day19.cpp  day2a.cpp  day2b.cpp  day3a.cpp  day3b.cpp  day4a.cpp  day4b.cpp  day5.cpp  day6.cpp  day7a.cpp  day7b.cpp  day8.cpp  day9.cpp  helpers.hpp  test.cpp
