cmake_minimum_required(VERSION 3.2)
project(AoC VERSION 1.0 LANGUAGES CXX)

set ( CMAKE_CXX_STANDARD          17 )
set ( CMAKE_CXX_STANDARD_REQUIRED ON )
set ( CMAKE_CXX_EXTENSIONS        OFF )

add_executable(day1 day1.cpp)
add_executable(day2a day2a.cpp)
add_executable(day2b day2b.cpp)
add_executable(day3a day3a.cpp helpers.hpp)
add_executable(day3b day3b.cpp helpers.hpp)
add_executable(day4a day4a.cpp helpers.hpp)
add_executable(day4b day4b.cpp helpers.hpp)
add_executable(day5 day5.cpp helpers.hpp)
add_executable(day6 day6.cpp helpers.hpp)
add_executable(day7a day7a.cpp helpers.hpp)
add_executable(day7b day7b.cpp helpers.hpp)
add_executable(day8 day8.cpp helpers.hpp)
add_executable(day9 day9.cpp helpers.hpp)
add_executable(day10 day10.cpp helpers.hpp)
add_executable(day11 day11.cpp helpers.hpp)
add_executable(day13 day13.cpp helpers.hpp)
add_executable(day14 day14.cpp helpers.hpp)
add_executable(day15 day15.cpp helpers.hpp)